# learn_opengl

./: .editorconfig  CMakeLists.txt  CMakeUserPresets.json  build.sh  conanfile.txt  main.cpp
libs/shader/: CMakeLists.txt  Shader.cpp  Shader.hpp
shaders/: frag_shader.glsl  frag_shaed.glsl  triangle_shader.glsl  vertex_shader.glsl
